Add images to README try 14

--- a/README.html
+++ b/README.html
@@ -8,19 +8,17 @@ There are two ways of camera calibration
 *Static camera calibration
 *Live camera calibration
 
-<h3>Image example of fishEye distortion</h3>
-<div style="display: grid; grid-template-columns: repeat(2, auto); text-align: center;">
+<h3 style="align-items: center; text-align: center;">Image example of fishEye distortion</h3>
+<div style="display: grid; grid-template-columns: repeat(2, auto); text-align: center; width: 90%; gap: 20px;">
   <div>
-    <img src="./photos/Series1_1.jpg" width="40%"/>
+    <img src="./photos/Series1_1.jpg" width="100%"/>
     <p><strong>Image before</strong></p>
   </div>
   <div>
-    <img src="./UndistortedResult.jpg" width="40%"/>
+    <img src="./UndistortedResult.jpg" width="100%"/>
     <p><strong>Image after</strong></p>
   </div>
 </div>
-
-
 
 ## Static camera calibration  
 As an input to camera calibration program you provide a photo or a series of photos which are distored. As an output program provides an undistorted photo and a text file with new calculated camera parameters.
